# justice

./: .gitignore  JUSTICE_example_run.ipynb  MOMA_reproduction.ipynb  NU_reproduction.ipynb  README.md  analyzer.py  fourth_paper_analysis.ipynb  pyproject.toml  run_optimization.py  third_paper_visualizations.ipynb
.github/workflows/: pytest.yml
analysis/: hpc_run.py  momadps_config.json
analysis/hpc_slurm_scripts/: run_single_agent_array.sh
data/input/: R5_regions.json  region_to_macro_5.npy
justice/util/: EMA_model_wrapper.py  borg_archive_processor.py  feature_importance.py  output_data_processor.py  pareto_nash_run.py  pareto_nash_search.py  pareto_nash_simulate.py  postprocessing_for_regret_calculations.py  reevaluate_optimal_policy.py  visualizer.py
justice/welfare/: social_welfare_function.py
solvers/convergence/: hypervolume.py
solvers/moea/: borg.py
